[project]
name = "scalable-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.21",
    "django>=6.0",
    "django-storages>=1.14.6",
    "google>=3.0.0",
    "python-dotenv>=1.2.1",
    "pywebpush>=2.1.2",
    "requests>=2.32.5",
    "twilio>=9.9.0",
    "user-agents>=2.2.0",
]
